Fixed text align for th in _reboot.scss

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -301,7 +301,12 @@ caption {
 
 th {
   // Matches default `<td>` alignment
-  text-align: left;
+  @include ltr{
+    text-align: left;
+  }
+  @include rtl{
+    text-align: right;
+  }
 }
 
 
